# sample

./: .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-and-publish.yml  release.yml  tests.yml
src/: envs.py
src/api/: __init__.py  sample.py
src/models/: contract.py  projects.py
src/pages/: cart.xml  dashboard.xml  settings.xml
src/types/: __init__.py  sample.py
tests/: conftest.py
tests/api/: test_sample_routes.py
