[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longlink-sample"
version = "0.0.0"
description = "Sample LongLink application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "longlink",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "isort"
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "isort"
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "main.py",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
default-groups = ["dev"]

[tool.longlink]

[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true
